# aether

./: .gitignore  CLAUDE.md  Cargo.toml  GC_TODO.md  KNOWN_ISSUES.md  MODULE_SYSTEM.md  README.md  REPL.md  SUMMARY.md  TESTING.md  _config.yml  build.gradle.kts  checkstyle.xml  pom.xml  settings.gradle.kts
.githooks/: pre-commit
benches/: interpreter_bench.rs
docs/: ARCHITECTURE.md  ASYNC.md  BACKLOG.md  CONFIGURATION.md  DESIGN.md  DEVELOPMENT.md  ERROR_HANDLING.md  EVENT_LOOP.md  EXAMPLES.md  GC_DESIGN.md  GITHUB_PAGES.md  HTTP.md  INTERPRETER.md  ITERATOR_PROTOCOL.md  JSON.md  LEXER.md  MODULE_SYSTEM.md  PARSER.md  PHASE2.md  PHASE3.md  REPL.md  STDLIB.md  STRING_FEATURES.md  STRUCT.md  TESTING.md  TIME.md  _config.yml  index.md
examples/: async_demo.ae  calculator.ae  collections_demo.ae  concurrent_io.ae  data_processing.ae  dict_demo.ae  enum_demo.ae  error_context.ae  error_handling.ae  factorial.ae  fibonacci.ae  file_io_demo.ae  file_utilities.ae  fizzbuzz.ae  gc_stress_test.ae  hello.ae  http_demo.ae  match_demo.ae  math_demo.ae  null_coalesce_demo.ae  recursion_test.ae  set_demo.ae  shapes.ae  simple_countdown.ae  simple_recursion.ae  sorting.ae  stdlib_demo.ae  string_demo.ae  string_indexing.ae  string_utilities.ae  task_manager.ae
src/: lib.rs  main.rs  repl.rs
stdlib/: collections.ae  core.ae  math.ae  string.ae
tests/: array_methods_test.rs  async_test.rs  clippy_fix_regression_test.rs  closure_leak_test.rs  dict_test.rs  enum_test.rs  error_context_test.rs  error_handling_test.rs  event_loop_test.rs  file_io_test.rs  function_expr_test.rs  (+28 more)
(+74 files in other folders)
