[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
description = "A general-purpose, dynamically typed programming language with automatic memory management"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/aether"
keywords = ["interpreter", "programming-language", "dynamic", "repl"]
categories = ["development-tools"]

[dependencies]
rustyline = { version = "12.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter_bench"
harness = false

[[bin]]
name = "aether"
path = "src/main.rs"
